--- a/web/themes/custom/govcon/components/atoms/button/button.mdx
+++ b/web/themes/custom/govcon/components/atoms/button/button.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgTypes } from "@storybook/blocks";
 import buttonStories from "./button.stories";
 import buttonTwig from "./button.twig";
-import "./_button.scss";
+import "./button.scss";
 
 <Meta title="Atoms/Button" of={buttonStories} />
 
@@ -33,4 +33,4 @@ A button with secondary emphasis.
 
 ## Props
 
-<ArgTypes of={buttonStories} /> 
+<ArgTypes of={buttonStories} />
