DGC-14:   FE: Header (#9)
* Created Header in Storybook

* Code Updates

* Updated Code Fixes

* Updated Code

* Updated Page.html & Colors Name

* Updated SCSS

* Updated Icons and Added Mixins

* Updated Menus

* Updated HTML with Classes and Remove the SCSS

* Updated Config as per the MAIN branch

* Removed The Sub Menu JS

* Header Fixed in Mobile

* Updated Header Code

* DGC-14: Update the header theming.

* DGC-14: Refactor header code.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/atoms/logo/logo.mdx
+++ b/web/themes/custom/govcon/components/atoms/logo/logo.mdx
@@ -16,7 +16,7 @@ The primary logo variant.
 
 <Canvas>
   <Story name="Primary">
-    {logoTwig({ variant: "primary", primary_logo: "/assets/images/Default.png" })}
+    {logoTwig({ src_path: "/assets/images/Default.png", src_alt: "Logo" })}
   </Story>
 </Canvas>
 
@@ -26,7 +26,17 @@ The secondary logo variant.
 
 <Canvas>
   <Story name="Secondary">
-    {logoTwig({ variant: "secondary", secondary_logo: "/assets/images/Blue.png" })}
+    {logoTwig({ src_path: "/assets/images/Blue.png", src_alt: "Logo" })}
+  </Story>
+</Canvas>
+
+### Default Logo
+
+The default logo variant.
+
+<Canvas>
+  <Story name="Default">
+    {logoTwig({ src_path: "/logo.svg", src_alt: "Logo" })}
   </Story>
 </Canvas>
 
