Updated content for Documentation

--- a/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing.mdx
+++ b/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing.mdx
@@ -5,11 +5,11 @@ import * as announcementListing from './announcement-listing.stories';
 
 # Announcement Listing
 
-The **Announcement Listing** component displays an individual announcement with a title, date, description, and a call-to-action link.
+The **Announcement Listing** component displays a list of announcements, each containing a title, date, description, and a call-to-action link.
 
 ## Usage
 
-This component is primarily used in **announcement listings** on homepages or news sections.
+This component is primarily used on **homepages or news sections** to display multiple announcements in a structured format.
 
 ## Example
 
