Created a New Button Atoms

--- a/web/themes/custom/govcon/components/atoms/button/button.mdx
+++ b/web/themes/custom/govcon/components/atoms/button/button.mdx
@@ -21,3 +21,9 @@ A button with secondary emphasis.
 
 <Canvas of={buttonStories.Secondary} />
 
+### Ghost Button
+
+A button with ghost emphasis.
+
+<Canvas of={buttonStories.Ghost} />
+
