Updated the Button Atoms

--- a/web/themes/custom/govcon/components/atoms/button/button.mdx
+++ b/web/themes/custom/govcon/components/atoms/button/button.mdx
@@ -21,9 +21,8 @@ A button with secondary emphasis.
 
 <Canvas of={buttonStories.Secondary} />
 
-### Ghost Button
+### Button With Icon
 
-A button with ghost emphasis.
+A button with Icon emphasis.
 
-<Canvas of={buttonStories.Ghost} />
-
+<Canvas of={buttonStories.ButtonWithIcon} />
