--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.mdx
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.mdx
@@ -24,3 +24,17 @@ The `Listing Card` supports the following elements:
 ## Props
 
 <Controls of={ListingCardStories.Default} />
+
+## Variations
+
+### Without Image
+
+<Canvas of={ListingCardStories.WithoutImage} />
+
+### Without Fields
+
+<Canvas of={ListingCardStories.WithoutFields} />
+
+### Without Fields & Image
+
+<Canvas of={ListingCardStories.WithoutFieldsImage} />
