DGC: 83 - Documenting Storybook (#63)
* Updated Overall Code for Better Documentation

* Fixed Formatting & Added Documentation for Header, Footer

* Updated The SCSS for Patterns

* Fixed Padding in Ext Link SVG

--- a/web/themes/custom/govcon/components/atoms/button/button.mdx
+++ b/web/themes/custom/govcon/components/atoms/button/button.mdx
@@ -7,6 +7,16 @@ import * as buttonStories from "./button.stories";
 
 Buttons trigger actions in your application. Use them wisely.
 
+## **Implementation**
+
+The Button atom component accepts the following props similar to that of link with modifier props in addition:
+
+- `link_url`: Specifies the target URL of the button.
+- `link_target`: Sets the target of the button.
+- `link_title`: Sets the title of the button.
+- `link_content`: Sets the content of the button.
+- `modifier` : Sets the Button Classes
+
 ## Variants
 
 ### Primary Button
