--- a/web/themes/custom/govcon/components/atoms/button/button.mdx
+++ b/web/themes/custom/govcon/components/atoms/button/button.mdx
@@ -36,3 +36,9 @@ A button with secondary emphasis.
 A button with Icon emphasis.
 
 <Canvas of={buttonStories.ButtonWithIcon} />
+
+### Minimal Button
+
+A button with minimal emphasis.
+
+<Canvas of={buttonStories.Minimal} />
