--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.mdx
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, Controls } from '@storybook/addon-docs';
 import * as ListingCardStories from './listing-card.stories';
 
-<Meta title="Molecules/Listing Card" />
+<Meta title="Molecules/Listing Card" of={ListingCardStories} />
 
 # Listing Card
 
@@ -34,7 +34,3 @@ The `Listing Card` supports the following elements:
 ### Without Fields
 
 <Canvas of={ListingCardStories.WithoutFields} />
-
-### Without Fields & Image
-
-<Canvas of={ListingCardStories.WithoutFieldsImage} />
