DGC: 136 - Create two-column pattern (#96)
* Added Two Column Pattern

* Added Two Column Pattern

* Added Featured Section & Updated Font Family

* Fixed Padding in pattern

* Pattern Image Centered

--- a/web/themes/custom/govcon/components/molecules/patterns/patterns.mdx
+++ b/web/themes/custom/govcon/components/molecules/patterns/patterns.mdx
@@ -9,6 +9,9 @@ import * as heroTextCard from "./hero-text-with-card/hero-text-with-card.stories
 import * as imageText from "./image-with-text/image-with-text.stories";
 import * as threeColumnCard from "./three-column-card/three-column-card.stories";
 import * as twoColumnCard from "./two-column-card/two-column-card.stories";
+import * as twoColumnWithImage from "./two-column-with-image/two-column-with-image.stories";
+import * as featuredSection from "./featured-section/featured-section.stories";
+
 
 
 # Gutenberg Patterns Guide
@@ -77,6 +80,12 @@ Below are the patterns available in Storybook for Gutenberg:
 
 <Canvas of={featuredSession.Default} />
 
+### Featured Section
+
+**Usage:** A layout to highlight important sessions or content with Recent Announcement View.
+
+<Canvas of={featuredSection.Default} />
+
 ### Two Column Card
 
 **Usage:** A layout with two equal columns, suitable for comparisons or dual content display.
@@ -118,6 +127,12 @@ Below are the patterns available in Storybook for Gutenberg:
 **Usage:** A tall card layout, best for long-format content or stacked information.
 
 <Canvas of={verticalCard.Default} />
+
+### Two Column with Image
+
+**Usage:** A layout with two equal columns, suitable for Text & Image or dual content display.
+
+<Canvas of={twoColumnWithImage.Default} />
 
 ---
 
