--- a/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing.mdx
+++ b/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing.mdx
@@ -1,9 +1,9 @@
 import { Meta, Story, Controls, Canvas } from '@storybook/addon-docs';
 import * as announcementListing from './announcement-listing.stories';
 
-<Meta title="Organisms/Announcement Listing" />
+<Meta title="Organisms/Special Announcement Listing" />
 
-# Announcement Listing
+# Special Announcement Listing
 
 The **Announcement Listing** component displays a list of announcements, each containing a title, date, description, and a call-to-action link.
 
