DGC-167: Load the Fonts inside gutenberg editor. (#141)

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg.mdx
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
-import * as styles from './gutenberg-style.scss';
+import * as styles from '../gutenberg-style.scss';
 import gbImg from "/dist/assets/images/gutenberg/image.png";
 import editorImg from "/dist/assets/images/gutenberg/editor.png";
 import patternsImg from "/dist/assets/images/gutenberg/patterns.png";
@@ -119,7 +119,7 @@ Gutenberg comes with numerous built-in blocks:
    <img src={blockSettingsImg} alt="Block Settings" width="350px" />
    <br />
    - Padding/margin controls
-   - Font Family, Weight & Size 
+   - Font Family, Weight & Size
 
 In the image given above, you can see multiple options for text configuration like boldness, links, and italics. The dropdown will show more advanced options.
 
