Updated in Documentation (#147)

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg.mdx
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg.mdx
@@ -6,6 +6,8 @@ import patternsImg from "/dist/assets/images/gutenberg/patterns.png";
 import textColorImg from "/dist/assets/images/gutenberg/text-color.png";
 import blockSettingsImg from "/dist/assets/images/gutenberg/block-settings.png";
 import headingAlignmentImg from "/dist/assets/images/gutenberg/heading-alignment.png";
+import mxAuto from "/dist/assets/images/gutenberg/mx-auto.png";
+
 
 <style> {`ol {list-style-type: auto;}`}</style>
 
@@ -118,8 +120,11 @@ Gutenberg comes with numerous built-in blocks:
    <br />
    <img src={blockSettingsImg} alt="Block Settings" width="350px" />
    <br />
-   - Padding/margin controls
-   - Font Family, Weight & Size
+   - Padding/margin controls - Apply the mx-auto class to center the content within the container when a user selects horizontal margin spacing and then tries to reset it.
+   <br />
+   <img src={mxAuto} alt="Margin Auto" width="350px" />
+   <br />
+   - Font Family, Weight & Size 
 
 In the image given above, you can see multiple options for text configuration like boldness, links, and italics. The dropdown will show more advanced options.
 
